# nb-query

./: .flake8  .gitignore  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt
nb_query/: __init__.py  main.py
tests/: NB_Query_Test_Notebook.ipynb  test_main.py
