[tool.poetry]
name = "nb-query"
version = "0.1.0"
description = "Python package to search in jupyter notebooks"
authors = ["Laszlo Sragner <sragner@gmail.com>"]
license = "MIT"
homepage = "https://github.com/xLaszlo/nb-query"
repository = "https://github.com/xLaszlo/nb-query"
readme = "README.md"
packages = [{include = "nb_query"}]

[tool.poetry.scripts]
nb-query = "nb_query.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.7.0"}
pandas = "^1.5.2"

[tool.black]
skip-string-normalization = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = {version = "^6.5.0", extras = ["toml"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["nb_query", "tests"]

[tool.coverage.run]
branch = true
source = ["nb_query"]

[tool.coverage.report]
show_missing = true
